# raytracing

./: CMakeLists.txt  README.md  camera.cpp  camera.h  colorDBL.h  light.cpp  light.h  main.cpp  material.h  output.ppm  polygon.cpp  polygon.h  ray.cpp  ray.h  scene.cpp  scene.h  shape.cpp  shape.h
progress/: output 2.ppm  output 3.ppm  output 4.ppm  output 5.ppm  output 6.ppm  output 7.ppm  output 8.ppm  output 9.ppm  output.ppm
